Uses the Nucleus framework now which allows for more build targets, auto updating and easier os integration Fixed bugs in the mods installer Added a Manifest Version Check before retrieving the Manifest to limit requests Added Hash Verification for downloaded mods if they have a provided hash in the Manifest